--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -22,6 +23,7 @@
     "convex": "1.8.0",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
+    "node-html-parser": "6.1.12",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
@@ -29,6 +31,9 @@
     "wanakana": "5.3.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "6.4.1",
+    "@testing-library/react": "14.2.1",
+    "@types/jest": "29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -36,8 +41,11 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-tailwindcss": "3.14.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "29.1.2",
     "typescript": "^5"
   }
 }
