--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-html-parser": "6.1.12",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "wanakana": "5.3.1"
