--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-html-parser": "6.1.12",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "9.8.0",
     "sonner": "1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
